[gd_scene load_steps=5 format=2]

[ext_resource path="res://TopDownShootGame/Turrent/Turrent.gd" type="Script" id=1]
[ext_resource path="res://TopDownShootGame/Image/Turrent/specialBarrel2_outline.png" type="Texture" id=2]
[ext_resource path="res://NixLib/Common/Sight.gd" type="Script" id=3]
[ext_resource path="res://TopDownShootGame/Projectile/flame.tscn" type="PackedScene" id=4]

[node name="Turrent" type="Node2D"]
script = ExtResource( 1 )
ammo = ExtResource( 4 )
fires = [ NodePath("Fire") ]

[node name="Sight" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="Fire" type="Node2D" parent="."]
position = Vector2( 20.303, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.304, 0 )
rotation = -1.5708
texture = ExtResource( 2 )
[connection signal="body_entered" from="Sight" to="." method="_on_ViewRange2D_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_ViewRange2D_body_exited"]
